--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_login_signup
+name: flutter_app
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -14,46 +14,45 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  shared_preferences: ^0.5.7+3
-  cupertino_icons: ^0.1.3
-  google_fonts: ^1.1.0
-  http: ^0.12.1
-  flutter_svg: ^0.17.3+1
+  cupertino_icons: ^0.1.2
+  google_fonts: ^0.3.5
   ff_navigation_bar: ^0.1.5
-  flutter_webview_plugin: ^0.3.0+2
+  shared_preferences: ^0.5.6+3
   email_validator: ^0.1.4
-  flutter_statusbarcolor: ^0.2.3
+  http: ^0.12.1
+  flutter_webview_plugin: ^0.3.0+2
+  photo_view: ^0.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/lionel-messi-wallpaper-2017-hd.jpg
-
+    
+    - assets/images/
+    
+  #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
