--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,12 +5,14 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="TourMend"
+        android:label="tourmend_app"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY" 
+                   android:value="AIzaSyAKEtnOKeRUI2BF9Ar_bjtV-u8O55ZrAu8"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
