--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   http: ^0.12.1
   flutter_webview_plugin: ^0.3.0+2
   photo_view: ^0.9.2
+  google_maps_flutter: ^0.5.28+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
