--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.0+2
   photo_view: ^0.9.2
   google_maps_flutter: ^0.5.28+1
+  dio: ^3.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
