--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   http: ^0.12.1
   flutter_webview_plugin: ^0.3.0+2
   photo_view: ^0.9.2
+  image_picker: ^0.6.7+4
   google_maps_flutter: ^0.5.28+1
   dio: ^3.0.9
+  location: ^3.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
