--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,12 @@ dependencies:
   ff_navigation_bar: ^0.1.5
   shared_preferences: ^0.5.6+3
   email_validator: ^0.1.4
-  http: ^0.12.1
   flutter_webview_plugin: ^0.3.0+2
+  google_maps_flutter: ^0.5.28+1
+  location: ^3.0.2
   photo_view: ^0.9.2
   image_picker: ^0.6.7+4
-  google_maps_flutter: ^0.5.28+1
-  dio: ^3.0.9
-  location: ^3.0.2
+  flappy_search_bar: ^1.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,10 +47,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  assets:
-    
-    - assets/images/
-    
+  # assets:
+  #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
