--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   location: ^3.0.2
   photo_view: ^0.9.2
   image_picker: ^0.6.7+4
-  flappy_search_bar: ^1.7.2
+  flutter_launcher_icons: ^0.7.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -41,6 +41,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+
 flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
