--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   photo_view: ^0.9.2
   image_picker: ^0.6.7+4
   intl: ^0.16.1
-  flutter_advanced_networkimage: ^0.7.0
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,6 +50,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/Images/
     - asset/Images/
  
   # An image asset can refer to one or more resolution-specific "variants", see
