--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter:
   google_fonts: ^0.3.5
   ff_navigation_bar: ^0.1.5
   shared_preferences: ^0.5.6+3
@@ -31,7 +32,7 @@ dependencies:
   google_maps_flutter: ^0.5.28+1
   location: ^3.0.2
   photo_view: ^0.9.2
-  image_picker: ^0.6.7+4
+  image_picker: ^0.6.7+11
   intl: ^0.16.1
   
   
@@ -50,7 +51,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Images/
+    - assets/images/
+    - assets/social_media/
     
  
   # An image asset can refer to one or more resolution-specific "variants", see
